# monthly-dev-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: monthly-newsletter.yml  weekly-scrape.yml
config/: newsletter.yaml  repos.yaml  sources.yaml
data/: state.json
data/weekly/: 2026-W05-github-aips.json  2026-W05-github-repos.json  2026-W05-governance.json  2026-W05-web-content.json  2026-W05-youtube.json  2026-W06-github-aips.json  2026-W06-github-repos.json  2026-W06-governance.json  2026-W06-web-content.json  2026-W06-youtube.json  2026-W07-github-aips.json  2026-W07-github-repos.json  2026-W07-governance.json  2026-W07-web-content.json  2026-W07-youtube.json  2026-W08-github-aips.json  2026-W08-github-repos.json  2026-W08-governance.json  2026-W08-web-content.json  2026-W08-youtube.json  2026-W09-github-aips.json  2026-W09-github-repos.json  2026-W09-governance.json  2026-W09-web-content.json  2026-W09-youtube.json  2026-W10-web-content.json  2026-W11-github-aips.json  2026-W11-github-repos.json  2026-W11-web-content.json
docs/: index.html
docs/changelogs/: 2026-03.html
output/changelogs/: 2026-02.html  2026-02.md  (+1 more)
scripts/: generate_newsletter.py  run_monthly_generate.py  run_weekly_scrape.py
templates/: changelog.html.j2  changelog.md.j2  newsletter.html.j2  newsletter.md.j2
tests/: test_aggregator.py  test_categorizer.py  test_changelog_renderer.py  test_changelog_scraping.py  test_classifier.py  test_filter.py  test_governance_scraper.py  test_renderer.py  test_scrapers.py  test_youtube_scraper.py
(+20 files in other folders)
