[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aptos-dev-newsletter"
version = "0.1.0"
description = "Automated Aptos developer newsletter generator"
requires-python = ">=3.9"
dependencies = [
    "PyGithub>=2.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "anthropic>=0.70.0",
    "Jinja2>=3.1.0",
    "premailer>=3.10.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
